# FilmNoir

./: .gitignore  README.md
Backend/: .dockerignore  Dockerfile  pyproject.toml
Backend/FilmNoir/: manage.py
Backend/FilmNoir/FilmNoir/: asgi.py  settings.py  wsgi.py
Backend/FilmNoir/main/: urls.py  views.py
Backend/film_noir/: db.sqlite3  foo.py  manage.py
Backend/film_noir/api/schemas/: movie.py
Backend/film_noir/api/urls/: all.py  movie.py  serial.py
Backend/film_noir/api/views/: movie.py  serial.py
Backend/film_noir/common/: admin.py  constants.py  converters.py  models.py  serializer.py  service.py  type_aliases.py  value_objects.py
Backend/film_noir/common/migrations/: 0001_initial.py
Backend/film_noir/common/models/: actor.py  base_content.py  base_episode.py  director.py  genre.py
Backend/film_noir/config/: asgi.py  settings.py  urls.py  wsgi.py
Backend/film_noir/content/: models.py
Backend/film_noir/film_noir/: asgi.py  settings.py  urls.py  wsgi.py
Backend/film_noir/movie/: admin.py  constants.py  converters.py  models.py  serializer.py  service.py  urls.py  value_objects.py  views.py
Backend/film_noir/movie/migrations/: 0001_initial.py  0002_alter_movie_genres_alter_movie_poster_and_more.py  0003_alter_movie_director.py
Backend/film_noir/serial/: admin.py  apps.py  constants.py  converters.py  models.py  serializer.py  service.py  value_objects.py
Backend/film_noir/serial/migrations/: 0001_initial.py
Backend/film_noir/tests/: configure_app.py
Backend/film_noir/tests/movie/: run_tests.py
Backend/filmnoir/: db.sqlite3
Backend/filmnoir/application/dto/: auth.py  movie.py
Backend/filmnoir/application/exceptions/: mapping.py  validation.py
Backend/filmnoir/application/mappers/: form_data_to_user_create.py  query_params_to_movie_filter.py
Backend/filmnoir/application/ports/: mapper.py
Backend/filmnoir/application/serializers/: actor.py  director.py  genre.py  movie.py
Backend/filmnoir/application/service_factories/: auth.py  movie.py  user.py
Backend/filmnoir/application/services/: auth.py  movie.py  user.py
Backend/filmnoir/config/: asgi.py  settings.py  urls.py  wsgi.py
Backend/filmnoir/domain/: admin.py  apps.py  constants.py
Backend/filmnoir/domain/exceptions/: __init__.py  auth.py  media.py  user.py
Backend/filmnoir/domain/migrations/: 0001_initial.py  0002_rename_director_movie_directors.py
Backend/filmnoir/domain/models/: __init__.py  actor.py  director.py  genre.py  movie.py  user.py
Backend/filmnoir/domain/ports/: data.py  model.py  repository.py
Backend/filmnoir/domain/repositories/: movie.py  user.py
Backend/filmnoir/domain/services/: auth.py  movie.py  token.py
(+43 files in other folders)
