[tool.poetry]
packages=[{include="film_noir"}]

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nauzybekturganbayev",email = "smiling.cornflower@gmail.com"}
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
