[project]
name = "filmnoir"
version = "0.1.0"
description = "A Django-based film noir project"
authors = [
    { name = "nauzybekturganbayev", email = "smiling.cornflower@gmail.com" }
]
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "unidecode (>=1.3.8,<2.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
djangorestframework-stubs = "^3.15.3"
black = "^25.1.0"
django-stubs = "^5.1.3"
django-stubs-ext = "^5.1.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
